--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,15 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["src/*"],
+      "components/*": ["src/components/*"],
+      "utils/*": ["src/utils/*"],
+      "screens/*": ["src/screens/*"],
+      "modals/*": ["src/modals/*"],
+      "constants/*": ["src/constants/*"],
+      "redux/*": ["src/redux/*"],
     }
   },
   "include": [
