--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "android-fast": "./scripts/start-dev.sh",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android:release": "cd android && gradlew assembleRelease && cd .. && adb install -r android/app/build/outputs/apk/release/app-release.apk"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.2.1",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
@@ -36,6 +39,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-popup-menu": "^0.17.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
@@ -45,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
