--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "vacom-crm",
+    "name": "VACOM CRM",
     "slug": "vacom-crm",
     "version": "1.0.0",
     "orientation": "portrait",
