--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "crypto-js": "^4.2.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -39,10 +41,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.58",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-paper": "^5.13.1",
+    "react-native-pdf": "^6.7.7",
     "react-native-popup-menu": "^0.17.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
